--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -69,7 +69,7 @@
             <i></i>
             <i></i>
         </div>
-        <div class="Stairs-of-AI">Stairs of AI</div>
+        <div class="Stairs-of-AI">Level of AI</div>
         <div class="step" style="--j:3";>
             <i></i>
             <i></i>
@@ -132,7 +132,7 @@
 <div class="chara2">
     <img src="/static/image/course_img/NLPHome.png">
 </div>
-<div class="chara1">
+<div class="chara3">
     <img src="/static/image/course_img/CalculusHome.png">
 </div>
 {#    <div class="button_area">#}
