--- a/templates/content/content_list.html
+++ b/templates/content/content_list.html
@@ -30,6 +30,7 @@
                 <p>{{ item.title }}, the style in the painting integrates temptation, fantasy and strangeness
                 </p>
             </div>
+        <p style="font-family: Algerian">{{ item.title }}</p>
         </div>
 {% endfor %}
     </div>
