--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
     <link rel="stylesheet" href="{% static 'css/home_stairs.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home_charas.css' %}">
 {#    <link rel="stylesheet" href="glide.core.min.css">#}
 {#    <link rel="stylesheet" href="glide.theme.min.css">#}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -126,15 +127,18 @@
         </div>
 
     </div>
-<div class="chara1">
-    <img src="/static/image/course_img/PFHome.png">
-</div>
-<div class="chara2">
-    <img src="/static/image/course_img/NLPHome.png">
-</div>
-<div class="chara3">
-    <img src="/static/image/course_img/CalculusHome.png">
-</div>
+    <div class="chara1">
+        <img  src="/static/image/course_img/PFHome.png">
+    </div>
+    <div class="chara2">
+        <img  src="/static/image/course_img/NLPHome.png">
+    </div>
+    <div class="chara3">
+        <img  src="/static/image/course_img/CalculusHome.png">
+    </div>
+    <div class="chara4">
+        <img  src="/static/image/course_img/DSHome.png">
+    </div>
 {#    <div class="button_area">#}
         <div class="button_left">
             <a href="/content/courses_list" class="button">
