--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -139,6 +139,9 @@
     <div class="chara4">
         <img  src="/static/image/course_img/DSHome.png">
     </div>
+    <div class="chara5">
+        <img  src="/static/image/course_img/COHome.png">
+    </div>
 {#    <div class="button_area">#}
         <div class="button_left">
             <a href="/content/courses_list" class="button">
