--- a/templates/content/courses_list.html
+++ b/templates/content/courses_list.html
@@ -6,6 +6,9 @@
     <div class="container">
     <div>
         <h2>Reading</h2>
+        <a href="/content/add/courses/">
+        <p style="font-family: Algerian;font-size: medium; color: grey">Edit courses</p>
+        </a>
         <div class="buttons">
        <a href="/content/add/content/">
         <button class="button1">Share</button>
