--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -125,22 +125,33 @@
             <i></i>
             <i></i>
         </div>
-
     </div>
     <div class="chara1">
+        <a href="/content/ShowCourses/?lable=Programming-Fundamentals">
         <img  src="/static/image/course_img/PFHome.png">
+        </a>
     </div>
     <div class="chara2">
+        <a href="/content/ShowCourses/?lable=NLP">
         <img  src="/static/image/course_img/NLPHome.png">
+        </a>
     </div>
     <div class="chara3">
+        <a href="/content/ShowCourses/?lable=Calculus">
         <img  src="/static/image/course_img/CalculusHome.png">
+        </a>
     </div>
+
+    <a href="/content/ShowCourses/?lable=Data-Structures-and-Algorithms">
     <div class="chara4">
         <img  src="/static/image/course_img/DSHome.png">
     </div>
+    </a>
+
     <div class="chara5">
+        <a href="/content/ShowCourses/?lable=Computer-Organization-and-Architecture">
         <img  src="/static/image/course_img/COHome.png">
+        </a>
     </div>
 {#    <div class="button_area">#}
         <div class="button_left">
