--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -33,7 +33,7 @@ body {
 
 a {
   text-decoration: none;
-  font-size: 30px;
+  /*font-size: 30px;*/
 }
 
 /*=============== BUTTON ===============*/
