--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -17,46 +17,46 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header " >
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand " style="font-family: Algerian" href="/home/">AIPEDIA</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/content/courses_list/">study <span class="sr-only">(current)</span></a></li>
-        <li><a href="/content/content_list/">share</a></li>
-        <li><a href="/content/play_list/">play</a></li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default" >
-            <a href="/content/all_courses_list">Submit</a></button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user_session.name }} <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/users/profile/">Your profile</a></li>
-            <li><a href="#">log out</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+{#<nav class="navbar navbar-default">#}
+{#  <div class="container-fluid">#}
+{#    <!-- Brand and toggle get grouped for better mobile display -->#}
+{#    <div class="navbar-header " >#}
+{#      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">#}
+{#        <span class="sr-only">Toggle navigation</span>#}
+{#        <span class="icon-bar"></span>#}
+{#        <span class="icon-bar"></span>#}
+{#        <span class="icon-bar"></span>#}
+{#      </button>#}
+{#      <a class="navbar-brand " style="font-family: Algerian" href="/home/">AIPEDIA</a>#}
+{#    </div>#}
+{##}
+{#    <!-- Collect the nav links, forms, and other content for toggling -->#}
+{#    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">#}
+{#      <ul class="nav navbar-nav">#}
+{#        <li class="active"><a href="/content/courses_list/">study <span class="sr-only">(current)</span></a></li>#}
+{#        <li><a href="/content/content_list/">share</a></li>#}
+{#        <li><a href="/content/play_list/">play</a></li>#}
+{#      </ul>#}
+{#      <form class="navbar-form navbar-left">#}
+{#        <div class="form-group">#}
+{#          <input type="text" class="form-control" placeholder="Search">#}
+{#        </div>#}
+{#        <button type="submit" class="btn btn-default" >#}
+{#            <a href="/content/all_courses_list">Submit</a></button>#}
+{#      </form>#}
+{#      <ul class="nav navbar-nav navbar-right">#}
+{#        <li><a href="#">Link</a></li>#}
+{#        <li class="dropdown">#}
+{#          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user_session.name }} <span class="caret"></span></a>#}
+{#          <ul class="dropdown-menu">#}
+{#            <li><a href="/users/profile/">Your profile</a></li>#}
+{#            <li><a href="#">log out</a></li>#}
+{#          </ul>#}
+{#        </li>#}
+{#      </ul>#}
+{#    </div><!-- /.navbar-collapse -->#}
+{#  </div><!-- /.container-fluid -->#}
+{#</nav>#}
 
 <div>
 
