--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
 {#    <link rel="stylesheet" href="{% static 'css/content_style.css' %}">#}
-    <link rel="stylesheet" href="{% static 'bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">
-    <script src="{%static 'js/vue.js' %}"></script>
-    <script src="glide.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">
+{#    <script src="{%static 'js/vue.js' %}"></script>#}
+    <script src="glide.min.js" type="javascript" charset="utf-8"></script>
 {#    <link rel="stylesheet" href="glide.core.min.css">#}
 {#    <link rel="stylesheet" href="glide.theme.min.css">#}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/content_list_style.css' %}">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/content_list_style.css' %}">
 
 {#    <link rel = "stylesheet" href="{% static 'content_style.css' %}">#}
     {% block css %}{% endblock %}
