--- a/templates/base/base1.html
+++ b/templates/base/base1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AIpedia</title>
 {#    <link rel="stylesheet" href="{% static 'css/content_style.css' %}">#}
     <link rel="stylesheet" href="{% static 'bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">
     <script src="{%static 'js/vue.js' %}"></script>
@@ -65,7 +65,7 @@
         <ul class="menus">
             <li class="li">
                 <i> .</i>
-                Mathematics
+                <a href="/content/showcourses_labale1/?lable=Mathematics">Mathematics</a>
                 <ul>
                     <li>
                         <a href="/content/ShowCourses/?lable=Calculus">Calculus</a>
@@ -80,7 +80,7 @@
             </li>
             <li class="li">
                 <i> .</i>
-                Computer Science
+                <a href="/content/showcourses_labale1/?lable=Computer-Science">Computer Science</a>
                 <ul>
                     <li>
                         <a href="/content/ShowCourses/?lable=Programming-Fundamentals">Programming</a>
@@ -95,7 +95,7 @@
             </li>
             <li class="li">
                 <i> .</i>
-                Core AI
+                <a href="/content/showcourses_labale1/?lable=Core-AI">Core AI</a>
                 <ul>
                     <li>
                         <a href="/content/ShowCourses/?lable=Machine-Learning">Machine Learning</a>
@@ -116,8 +116,7 @@
             </li>
             <li class="li">
                 <i> .</i>
-                Data Science &
-                Data Analysis
+                <a href="/content/showcourses_labale1/?lable=Data-Science-Data-Analysis">Data Science&Data Analysis</a>
                 <ul>
                     <li>
                         <a href="/content/ShowCourses/?lable=Data-Preprocessing-and-Cleaning">Data Preprocessing</a>
@@ -136,7 +135,7 @@
             </li>
             <li class="li">
                 <i> .</i>
-                AI Application Domains
+                <a href="/content/showcourses_labale1/?lable=AI-Application-Domains">AI Application Domains</a>
                 <ul>
                     <li>
                         <a href="/content/ShowCourses/?lable=Autonomous-Driving-and-Unmanned-Systems">Autonomous Driving</a>
