--- a/templates/content/add_content.html
+++ b/templates/content/add_content.html
@@ -22,37 +22,7 @@
     <div id="app" class="form-group">
         <label for="exampleInputPassword1">What is it?</label>
         {{ form.what_area }}
-{#    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="LEVEL" name="what">#}
-{#        动态界面#}
-{#        <lable> number of key</lable>#}
-{#        <h2>Key <strong>Features</strong> of SpaCy</h2>#}
-{#        <select id="selectkey" class="form-control" name="key_num" v-model="key_num">#}
-{#          <option value="1">1</option>#}
-{#          <option value="2">2</option>#}
-{#          <option value="3">3</option>#}
-{#          <option value="4">4</option>#}
-{#          <option value="5">5</option>#}
-{#        </select>#}
-{#        <div>#}
-{#        {% verbatim %}{{ key_num }}#}
-{#                    <ul>#}
-{#                        <li v-for = "i in key_num">一个循环</li>#}
-{#                    </ul>#}
-{#        {% endverbatim %}#}
-{#        </div>#}
 
-    </div>
-
-    <div class="form-group">
-        <label for="exampleInputPassword1">How to use it?</label>
-        {{ form.how_area }}
-{#    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="LEVEL" name="how">#}
-    </div>
-
-        <div class="form-group">
-        <label for="exampleInputPassword1">An Example</label>
-        {{ form.example }}
-{#    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="LEVEL" name="how">#}
     </div>
 
         <div class="form-group">
@@ -67,18 +37,11 @@
 {#    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="LEVEL" name="how">#}
     </div>
 
-
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> I agree
-    </label>
-  </div>
-
     <div>
         <input type="file" id="fileInput1" name="image1">
     </div>
 
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default">Upload</button>
 </form>
      </div>
 {% endblock %}
