--- a/templates/register/login.html
+++ b/templates/register/login.html
@@ -48,7 +48,7 @@
      <div class="ui message" style="font-size: 10px">
                 have no account？<a href="{% url 'users:signup' %}">sign up</a>
 </div>
-     <span style="color: red">{{ error }}</span>
+     <span style="font-size: medium; color: red">{{ error }}</span>
 </form>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
  <script src="https://cdn.bootcss.com/popper.js/1.15.0/umd/popper.js"></script>
