--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,7 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AIpedia</title>
 {#    <link rel="stylesheet" href="{% static 'css/content_style.css' %}">#}
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">
 {#    <script src="{%static 'js/vue.js' %}"></script>#}
