--- a/templates/content/showcourses_labale1.html
+++ b/templates/content/showcourses_labale1.html
@@ -6,16 +6,13 @@
     <div class="container">
     <div class="reading">
         <h2>Reading</h2>
-        <div class="buttons">
-        <a href="/content/courses_list/">
-        <button class="button1">Back</button>
+       <a href="/content/all_courses_list/">
+        <button class="button">ALL</button>
         </a>
-        </div>
-
     </div>
     <div class="shell">
 {% for item in queryset %}
-    <div class="box">
+        <div class="box">
         <div>
             <div class="images">
                 <img src="/static/image/course_img/{{ item.level2 }}.png" alt="{{ item.level2 }}">
@@ -27,8 +24,8 @@
                 <p>{{ item.title }}, the style in the painting integrates temptation, fantasy and strangeness
                 </p>
             </div>
-            <p style="font-family: Algerian; font-size: small"><a href="/content/all_courses/?id={{ item.id }}">{{ item.title }}</a></p>
         </div>
+            <p style="font-family: Algerian; font-size: smaller"><a href="/content/all_courses/?id={{ item.id }}">{{ item.title }}</a></p>
 
     </div>
 {% endfor %}
@@ -37,5 +34,4 @@
 {% endblock %}
 
 {% block js %}
-
 {% endblock %}
