--- a/templates/register/profile.html
+++ b/templates/register/profile.html
@@ -7,17 +7,53 @@
     <label style="font-size: larger">name:  {{ user_obj.name }}</label> <p style="font-size: larger"></p>
     <label style="font-size: larger">email:  {{ user_obj.email }}</label> <p style="font-size: larger"></p>
     </div>
+
+    <div>
+<h1>progess: {{ user_obj.level }}%</h1>
+    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 4%"></div>
+</div>
+<a href="/content/all_courses_list/">
+        <button class="button1">Go to study</button>
+        </a>
+    </div>
+
     <h2>My Sharing</h2>
+
+    <div class="shell">
 {% for item in user_content %}
         <div class="box">
-{#            <div class="images">#}
-{#                <img src="/media/{{ item.image_data }}" alt="{{ item.image_name }}">#}
-{#            </div>#}
+            <div class="images">
+                <img src="/media/{{ item.image_data }}" alt="{{ item.image_name }}">
+            </div>
             <div class="content">
                 <a href="/content/all_content/?id={{ item.id }}">
                 <h2>{{item.title}}</h2>
                 </a>
+                <p>{{ item.title }}, the style in the painting integrates temptation, fantasy and strangeness
+                </p>
             </div>
+        <p style="font-family: Algerian">{{ item.title }}</p>
         </div>
 {% endfor %}
+    </div>
+{% endblock %}
+
+{% block js %}
+{#    <script language="JavaScript">#}
+{#        $.ajax({#}
+{#        url: '/content/get_user_level/',#}
+        {#data:{"level1_name":$(this).val()},#}
+{#        type: 'GET',#}
+{#        dataType: 'json',#}
+{#        success: function () {#}
+{#            var content='';#}
+{#            $.each(data, function(i, item){#}
+{#                  content+='<option value='+item.level2+'>'+item.level2+'</option>'#}
+{#                });#}
+{#            $('#level2').html(content)#}
+{#        },#}
+{##}
+{#      });#}
+{#</script>#}
 {% endblock %}
