--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AIpedia</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" >
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.4.1-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/homepage.css' %}">
@@ -17,46 +17,6 @@
 </head>
 
 <body>
-{#<nav class="navbar navbar-default">#}
-{#  <div class="container-fluid">#}
-{#    <!-- Brand and toggle get grouped for better mobile display -->#}
-{#    <div class="navbar-header " >#}
-{#      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">#}
-{#        <span class="sr-only">Toggle navigation</span>#}
-{#        <span class="icon-bar"></span>#}
-{#        <span class="icon-bar"></span>#}
-{#        <span class="icon-bar"></span>#}
-{#      </button>#}
-{#      <a class="navbar-brand " style="font-family: Algerian" href="/home/">AIPEDIA</a>#}
-{#    </div>#}
-{##}
-{#    <!-- Collect the nav links, forms, and other content for toggling -->#}
-{#    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">#}
-{#      <ul class="nav navbar-nav">#}
-{#        <li class="active"><a href="/content/courses_list/">study <span class="sr-only">(current)</span></a></li>#}
-{#        <li><a href="/content/content_list/">share</a></li>#}
-{#        <li><a href="/content/play_list/">play</a></li>#}
-{#      </ul>#}
-{#      <form class="navbar-form navbar-left">#}
-{#        <div class="form-group">#}
-{#          <input type="text" class="form-control" placeholder="Search">#}
-{#        </div>#}
-{#        <button type="submit" class="btn btn-default" >#}
-{#            <a href="/content/all_courses_list">Submit</a></button>#}
-{#      </form>#}
-{#      <ul class="nav navbar-nav navbar-right">#}
-{#        <li><a href="#">Link</a></li>#}
-{#        <li class="dropdown">#}
-{#          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user_session.name }} <span class="caret"></span></a>#}
-{#          <ul class="dropdown-menu">#}
-{#            <li><a href="/users/profile/">Your profile</a></li>#}
-{#            <li><a href="#">log out</a></li>#}
-{#          </ul>#}
-{#        </li>#}
-{#      </ul>#}
-{#    </div><!-- /.navbar-collapse -->#}
-{#  </div><!-- /.container-fluid -->#}
-{#</nav>#}
 
 <div>
 
@@ -127,29 +87,29 @@
         </div>
     </div>
     <div class="chara1">
-        <a href="/content/ShowCourses/?lable=Programming-Fundamentals">
-        <img  src="/static/image/course_img/PFHome.png">
+        <a href="/content/showcourses_labale1/?lable=Data-Science-Data-Analysis">
+        <img  src="/static/image/course_img/DVHome.png">
         </a>
     </div>
     <div class="chara2">
-        <a href="/content/ShowCourses/?lable=NLP">
+        <a href="/content/showcourses_labale1/?lable=Core-AI">
         <img  src="/static/image/course_img/NLPHome.png">
         </a>
     </div>
     <div class="chara3">
-        <a href="/content/ShowCourses/?lable=Calculus">
+        <a href="/content/showcourses_labale1/?lable=Mathematics">
         <img  src="/static/image/course_img/CalculusHome.png">
         </a>
     </div>
 
-    <a href="/content/ShowCourses/?lable=Data-Structures-and-Algorithms">
+    <a href="/content/showcourses_labale1/?lable=AI-Application-Domains">
     <div class="chara4">
         <img  src="/static/image/course_img/DSHome.png">
     </div>
     </a>
 
     <div class="chara5">
-        <a href="/content/ShowCourses/?lable=Computer-Organization-and-Architecture">
+        <a href="/content/showcourses_labale1/?lable=Computer-Science">
         <img  src="/static/image/course_img/COHome.png">
         </a>
     </div>
